Фикс опечатки.Не первый((

--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -115,7 +115,7 @@
 
           <div class="mb-3 fst-italic">
             Отправляя данные, вы соглашаетесь, что <strong>обезличенная</strong> зарплата будет учтена при рассчетах и составлении графиков.
-            Мы гарантируем, что конфедициальность ваших данных будет соблюдена.
+            Мы гарантируем, что конфиденциальность ваших данных будет соблюдена.
           </div>
   
           <div class="mb-3 pt-2">
