added chart but it does not work

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -105,6 +105,12 @@
           </div>
 
           <div class="mb-5">
+            <app-people-distribution-chart
+              [chart]="salariesChart"
+              ></app-people-distribution-chart>
+          </div>
+
+          <div class="mb-5">
             <app-salary-chart-global-filters
               [filterData]="filterData"
               (filtersApplied)="applyGlobalFilters($event)"
