--- a/src/app/modules/salaries/components/professions-distribution-chart/people-distribution-chart.component.scss
+++ b/src/app/modules/salaries/components/professions-distribution-chart/people-distribution-chart.component.scss
@@ -1,10 +1,15 @@
 canvas {
-    min-height: 450px;
+    min-height: 250px;
 }
 
 #canvas-container {
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 450px;
+    min-height: 250px;
+    max-height: 500px;
+}
+
+.list-group-item {
+    font-size: smaller;
 }
