--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -71,6 +71,21 @@
             <app-field-error [field]="form.get('skillId')"></app-field-error>
           </div>
 
+          <div class="mb-3" *ngIf="industriesAsOptions.length > 0">
+            <label class="text-sm">Сфера, где вы работаете</label>
+            <ng-select
+                [items]="industriesAsOptions"
+                [selectOnTab]="true"
+                bindLabel="label"
+                bindValue="item"
+                placeholder="Выберите сферу, где работаете. Можно оставить поле пустым."
+                appendTo=""
+                formControlName="workIndustryId"
+              >
+              </ng-select>
+            <app-field-error [field]="form.get('workIndustryId')"></app-field-error>
+          </div>
+
           <div class="mb-3">
             <div><label class="">В каком городе Казахстана Вы живете?</label></div>
             <ng-select
