Changed main page

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -42,8 +42,14 @@
 
 <div class="feature bg-white">
   <div class="container">
-    <app-pricing-block (getStartedClick)="getStarted()"></app-pricing-block>
-
+    <div class="feature-title">Application is free for everybody and opensource<br />Forever</div>
+    <div class="mt-3 feature-subtitle">
+      We believe that this app should be free for everyone. 
+      We are <a href="https://github.com/orgs/Techinterview-space/repositories" class="text-reset" target="_blank"><i class="bi bi-github"></i> open source</a> and we are looking for contributors.
+    </div>
+    <div class="mt-3 feature-subtitle">
+      If you want to help us, here is our <a href="https://boosty.to/ake111aa" class="text-reset" target="_blank"><i class="bi bi-cash-coin"></i> boosty</a>. Any help is appreciated.
+    </div>
     <div class="mt-5">
       <hr class="mx-auto w-50" />
     </div>
