--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -129,7 +129,7 @@
           <div class="mb-5">
             <app-salaries-by-grades-chart
               [chart]="salariesChart.salariesByMoneyBarChart"
-              [title]="'Зарплаты в KZ компаниях'"
+              [title]="'Зарплаты в Казахстанских компаниях'"
               [salaries]="salariesChart.salariesPerProfessionForLocal">
             </app-salaries-by-grades-chart>
           </div>
@@ -137,7 +137,7 @@
           <div class="mb-5" *ngIf="salariesChart.hasRemoteSalaries">
             <app-salaries-by-grades-chart
               [chart]="salariesChart.salariesByMoneyBarChartForRemote"
-              [title]="'Зарплаты удаленщиков'"
+              [title]="'Зарплаты тех, кто работает удаленно в иностранных компаниях'"
               [salaries]="salariesChart.salariesPerProfessionForRemote">
             </app-salaries-by-grades-chart>
           </div>
