Made data clickable

--- a/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
@@ -3,34 +3,34 @@
 
   <div class="mb-3" *ngIf="barsForLocal.length > 0">
     <div class="mb-3">Казахстанские компании</div>
-    <div class="progress">
+    <div class="progress" (click)="toggleCountAndPercent()">
       <div
         *ngFor="let item of barsForLocal"
         class="progress-bar progress-bar-striped {{item.color}}"
         role="progressbar"
         [attr.aria-label]="item.label"
-        [ngStyle]="{'width': item.value + '%'}"
+        [ngStyle]="{'width': item.width + '%'}"
         [attr.aria-label]="item.value"
         aria-valuemin="0"
         aria-valuemax="100">
-        <strong title="{{item.label}} - {{item.value}}%" class="{{item.textColor}}">{{item.value}}%</strong>
+        <strong title="{{item.label}} - {{item.value}}" class="{{item.textColor}}">{{item.value}}</strong>
       </div>
     </div>
   </div>
 
   <div class="mb-3" *ngIf="barsForRemote.length > 0">
     <div class="mb-3">Иностранные компании</div>
-    <div class="progress">
+    <div class="progress" (click)="toggleCountAndPercent()">
       <div
         *ngFor="let item of barsForRemote"
         class="progress-bar progress-bar-striped {{item.color}}"
         role="progressbar"
         [attr.aria-label]="item.label"
-        [ngStyle]="{'width': item.value + '%'}"
+        [ngStyle]="{'width': item.width + '%'}"
         [attr.aria-label]="item.value"
         aria-valuemin="0"
         aria-valuemax="100">
-        <strong title="{{item.label}} - {{item.value}}%" class="{{item.textColor}}">{{item.value}}%</strong>
+        <strong title="{{item.label}} - {{item.value}}" class="{{item.textColor}}">{{item.value}}</strong>
       </div>
     </div>
   </div>
