--- a/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
@@ -2,7 +2,10 @@
   <div class="h5 mb-3">Распределение респондентов по грейдам</div>
 
   <div class="mb-3" *ngIf="barsForLocal.length > 0">
-    <div class="mb-3">Казахстанские компании</div>
+    <div class="mb-3">
+      <span>Казахстанские компании:</span>
+      <span class="ms-2">{{ totalCountLocal }} анкет</span>
+    </div>
     <div class="progress" (click)="toggleCountAndPercent()">
       <div
         *ngFor="let item of barsForLocal"
@@ -19,7 +22,10 @@
   </div>
 
   <div class="mb-3" *ngIf="barsForRemote.length > 0">
-    <div class="mb-3">Иностранные компании</div>
+    <div class="mb-3">
+      <span>Иностранные компании:</span>
+      <span class="ms-2">{{ totalCountRemote }} анкет</span>
+    </div>
     <div class="progress" (click)="toggleCountAndPercent()">
       <div
         *ngFor="let item of barsForRemote"
