--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">{{ title }}</div>
+  <div class="h5 mb-3">Min/max зарплаты по грейдам</div>
 
   <div class="fst-italic">
     Черные точки - это значения зарплаты, которые встречаются в выборке.
