Added skills/industry as required fields

--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -86,7 +86,7 @@
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
-                placeholder="Выберите ваш ЯП или фреймворк. Можно оставить поле пустым."
+                placeholder="Выберите ваш ЯП или фреймворк"
                 appendTo=""
                 formControlName="skillId"
               >
@@ -101,7 +101,7 @@
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
-                placeholder="Выберите сферу, где работаете. Можно оставить поле пустым."
+                placeholder="Выберите сферу, где работаете"
                 appendTo=""
                 formControlName="workIndustryId"
               >
