--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -63,7 +63,7 @@
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
-                placeholder="Выберите ваш ЯП или фреймворк. Можно оставить поле пустым."
+                placeholder="Выберите ваш ЯП или фреймворк"
                 appendTo=""
                 formControlName="skillId"
               >
@@ -78,7 +78,7 @@
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
-                placeholder="Выберите сферу, где работаете. Можно оставить поле пустым."
+                placeholder="Выберите сферу, где работаете"
                 appendTo=""
                 formControlName="workIndustryId"
               >
