--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -63,7 +63,7 @@
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
-                placeholder="Выберите ваш ЯП или фреймворк"
+                placeholder="Выберите ваш ЯП или фреймворк. Можно оставить пустым."
                 appendTo=""
                 formControlName="skillId"
               >
