--- a/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
+++ b/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">{{ title }}</div>
+  <div class="h5 mb-3">Распределение респондентов по городам проживания</div>
 
   <div class="row">
 
@@ -7,6 +7,19 @@
       <div class="mb-3 fst-italic" *ngIf="currentSalary != null && currentSalary.city == null; else hasCityInSalary">
         <div>Вы пока не указали город проживания.</div>
         <div>Уточнить данные <button type="button" class="btn-link-sm fst-italic font-weight-normal" (click)="openEditSalaryAction()">можно тут</button></div>
+      </div>
+
+      <div class="mb-1">
+        <input
+          type="checkbox"
+          class="cursor-pointer form-check-input"
+          id="includeNoDataCheckboxCities"
+          [(ngModel)]="showNoDataArea"
+          [ngModelOptions]="{standalone: true}"
+          (change)="changeShowNoDataAreaToggler()" />
+        <label class="ms-3 form-check-label fst-italic cursor-pointer" for="includeNoDataCheckboxCities">
+          Включить пункт "Нет данных"
+        </label>
       </div>
     </div>
 
