--- a/src/app/modules/salaries/components/add-salary/add-salary.component.html
+++ b/src/app/modules/salaries/components/add-salary/add-salary.component.html
@@ -58,7 +58,7 @@
           <div class="mb-3">
             <label class="text-sm">Ваша специализация</label>
             <ng-select
-                [items]="professions"
+                [items]="professionsAsOptions"
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
