--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -15,7 +15,7 @@
       <div class="col-md-3 mb-1">
         <label class="text-sm">Данные по специальностям</label>
         <ng-select
-            [items]="allProfessions"
+            [items]="professionsAsOptions"
             [hideSelected]="true"
             [selectOnTab]="true"
             bindLabel="label"
