--- a/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
+++ b/src/app/modules/salaries/components/edit-salary/edit-salary.component.html
@@ -44,7 +44,7 @@
           <div class="mb-3">
             <label class="">Ваша специализация</label>
             <ng-select
-                [items]="professions"
+                [items]="professionsAsOptions"
                 [selectOnTab]="true"
                 bindLabel="label"
                 bindValue="item"
