--- a/src/app/shared/components/share-button/share-button.component.html
+++ b/src/app/shared/components/share-button/share-button.component.html
@@ -1,1 +1,4 @@
-<button type="button" class="btn {{ cssBtnSize }} {{ css }}" (click)="share()"><i class="{{ btnIcon }}"></i>{{ btnTitle }}</button>
+<button
+    type="button"
+    class="btn {{ cssBtnSize }} {{ css }}"
+    (click)="share()"><i class="{{ btnIcon }}"></i>{{ btnTitle }}</button>
