--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -1,4 +1,4 @@
-<app-page-header>Зарплаты IT в Казахстане</app-page-header>
+<app-page-header>Зарплаты в IT в Казахстане</app-page-header>
 
 <div *ngIf="showDataStub" class="container mt-5 mb-3">
   <div *ngIf="isAuthenticated" class="alert alert-warning" role="alert">
